--- a/check.html
+++ b/check.html
@@ -6,12 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello World</h1>
-    <h2>Hello Wolrd</h2>
-    <p>Hello World</p>
-    <p>home branch added</p>
-    <p>code</p>
-    <p>code1</p>
-    <img src="images/React.png" alt="">
+    <h1>HI</h1>
+    <p>M</p>
+    <p>modified content</p>
 </body>
 </html>
