--- a/hello.html
+++ b/hello.html
@@ -6,8 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello World</h1>
-    <h2>Hello Wolrd</h2>
-    <p>Hello World</p>
+    <h1>Developer-1</h1>
+    <a href="www.goolge.com">google</a>
 </body>
 </html>
